# ai

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Alpha-Beta/: CMakeLists.txt  README.md  alpha_beta.h
Alpha-Beta/Impl/: alpha_beta.cpp
Common/: CMakeLists.txt  README.md  board.h  point_state.h
Common/Impl/: board.cpp
MCTS/: CmakeLists.txt  README.md  mcts.h
MCTS/Impl/: mcts.cpp
