CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(FIVE_IN_A_ROW_AI)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_SUBDIRECTORY(Common)
ADD_SUBDIRECTORY(Alpha-Beta)
ADD_SUBDIRECTORY(MCTS)

ADD_EXECUTABLE(MAIN_EXECUTABLE MAIN.CPP)
TARGET_LINK_LIBRARIES(MAIN_EXECUTABLE ALPHA_BETA MCTS COMMON)